--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1179,6 +1179,16 @@ p{
 	margin-top: 20px;
 
 }
+.sorting-block select {
+	background: #eeeeee;
+  border: none;
+  margin-left: 30px;
+  width: 50px;
+  margin-top: 8px;
+}
+.sorting-block-title {
+	margin-top: 0;
+}
 }
 	
 
