--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,26 @@
 			<div class="top-section">
 				<div class="content">
 					<p class="soc-p">login via:</p>
+					<div class="sign">
+						<div class="sign-in">Sign In</div>
+						<div class="sign-up">Sign Up</div>
+						<div class="social">
+							<button class="fb-btn sign-btn"><span class="btn-text-first">Sign in with Facebook</span></button>
+							<button class="tw-btn sign-btn"><span class="btn-text">Sign in with Twitter</span></button>
+							<button class="gg-btn sign-btn"><span class="btn-text">Sign in with Google</span></button>
+							<button class="ggw-btn sign-btn"><span class="btn-text">Sign in with Google</span></button>
+						</div>
+						<div class="or-icon"></div>
+						<div class="login-m-form">
+							<form action="/echo" method='post'>
+								<input type="text" class="login-m-form-login" placeholder="Login">
+								<input type="password" class="login-m-form-password" placeholder="Password">
+								<a href="" class="login-m-form-restore">Forgot password?</a>
+							</form>
+						</div>
+						<div class="sign-login">Login</div>
+						<div class="sign-close">Close</div>
+					</div>
 				<div class="soc-ic">
 					<a href="https://vk.com" class="ic vk-ic"></a>
 					<a href="https://www.facebook.com/" class="ic vk-fb"></a>
