--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,9 @@
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<div class="bg-container">
+			
+		</div>
 <div id="pc-container">
 	<div class="background">
 	 <div class="main-header clearfix">
@@ -22,6 +25,7 @@
 			<div class="top-section">
 				<div class="content">
 					<p class="soc-p">login via:</p>
+					<div class="sign-bg">
 					<div class="sign">
 						<div class="sign-in">Sign In</div>
 						<div class="sign-up">Sign Up</div>
@@ -31,7 +35,7 @@
 							<button class="gg-btn sign-btn"><span class="btn-text">Sign in with Google</span></button>
 							<button class="ggw-btn sign-btn"><span class="btn-text">Sign in with Google</span></button>
 						</div>
-						<div class="or-icon"></div>
+						<div class="or-icon"><span>or</span></div>
 						<div class="login-m-form">
 							<form action="/echo" method='post'>
 								<input type="text" class="login-m-form-login" placeholder="Login">
@@ -41,6 +45,7 @@
 						</div>
 						<div class="sign-login">Login</div>
 						<div class="sign-close">Close</div>
+					</div>
 					</div>
 				<div class="soc-ic">
 					<a href="https://vk.com" class="ic vk-ic"></a>
