--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -63,7 +63,7 @@
 				</select>
 				<div class="enter"></div>
 				<div class="showsettings"><span class="showspan">Show my translations</span></div>
-				<div class="settings-section">
+				<!--<div class="settings-section clearfix">
 					<div class="settings-title">
 						<h3 class="settings-section-title"><a href="#">My Settings</a></h3>
 					</div>
@@ -112,12 +112,12 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>-->
 			</div>
-		</div>
+			</div>
 		<div class="translate-window">
-			<h3 class="translate-window-title">word</h3>
-			<span class="translate-window-transcription">ˈsæləri]</span>
+			<h3 class="translate-window-title">Salary</h3>
+			<span class="translate-window-transcription">[ˈsæləri]</span>
 			<span class="translate-window-translate">слово, речь</span>
 			<div class="translate-window-save"><span class="save-span">Save</span></div>
 			<div class="translate-window-close"><span class="close-span">Close</span></div>
@@ -149,7 +149,42 @@
 						<label for="show">Don’t show tips</label>
 						<div class="close" title="закрыть">Закрыть</div>
 				</div>
-			</div>
+		</div>
+		<div class="functions-language">
+				<h3>User Settings</h3>
+				<div class="functions-language-slider">
+					<span>Language difficulty:</span>
+					<span class="level">Medium</span>
+					<input type="range" min="0" max="100" step="1" value="50"> 
+				</div>
+				<div class="functions-settings-news">
+							<h4 class="functions-news-title">News Sources</h4>
+							<div class="functions-box">
+							<input type="checkbox" class="functions-checkbox-settings" id="bbc">
+							<label for="bbc">BBC</label>
+							</div>
+							<div class="functions-box">
+							<input type="checkbox" class="functions-checkbox-settings" id="tech">
+							<label for="tech">TECHCRUNCH</label>
+							</div>
+							<div class="functions-box">
+							<input type="checkbox" class="functions-checkbox-settings" id="econom">
+							<label for="econom">Economist</label>
+							</div>
+							<div class="functions-box">
+							<input type="checkbox" class="functions-checkbox-settings" id="usatoday">
+							<label for="usatoday">USA Today</label>
+							</div>
+							<div class="functions-box">
+							<input type="checkbox" class="functions-checkbox-settings" id="forbes">
+							<label for="forbes">Forbes</label>
+							</div>
+							<div class="functions-box">
+							<input type="checkbox" class="functions-checkbox-settings" id="telegraph">
+							<label for="telegraph">Telegraph</label>
+							</div>
+				</div>
+			</div>	
 			<div class="center-content clearfix">
 			</div>
 
